<resources>
    <string name="app_name">Final_Project_BOARD_App</string>
    <string name="welcome_to_b_o_a_r_d">Welcome to B.O.A.R.D</string>
    <string name="please_enter_the_names_of_the_two_players_participating_below">Please enter the names of the two players participating below:</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_game">Start Game</string>
    <string name="resume_game">Resume Game</string>
    <string name="b_o_a_r_d">B.O.A.R.D</string>
    <string name="logo">logo</string>
    <string name="login_register">login/register</string>
    <string name="b_ard">B ARD</string>
    <string name="snowflae_logo_for_o">snowflae logo for O</string>
    <string name="it_is_name_s_turn">It is name\'s turn:</string>
    <string name="please_select_your_trick_from_the_list_below">Please select your trick from the list below:</string>
    <string name="add_trick">Add trick</string>
    <string name="if_the_trick_does_not_exist_in_the_list_above_add_a_new_one_below">If the trick does not exist in the list above, add a new one below</string>
    <string name="enter_your_trick_name_here">Enter your trick name here</string>
    <string name="enter_your_trick_difficulty_here">Enter your trick difficulty here</string>
    <string name="add_trick_text">add trick</string>
    <string name="did_player_1_land_the_trick">Did Player 1 land the trick?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="did_player_2_land_the_trick">Did Player 2 land the trick?</string>
    <string name="continue_game">Continue Game</string>
    <string name="restart">Restart</string>
    <string name="trick_help">Trick help</string>
    <string name="for_an_example_of_the_trick_click_the_button_below_to_see_a_video">For an example of the trick, click the button below to see a video</string>
</resources>